# gda-public

./: .dockerfile  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG  CMakeLists.txt  CONTRIBUTING.rst  Dockerfile-basic  Dockerfile-builder  Dockerfile-runner  Dockerfile-testing  LICENSE  README.rst  README_ADVANCED.rst  REQUIREMENTS.md  aaaa_test_import.py  build.sh  dependencies.py  gda_env.yml  gda_env38.yml  install.sh  ppinfo.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
doc_src/: README_ADVANCED.rst  all_methods.rst  conf.py  examples_README.rst  homology.dim0.rst  index.rst  multidim.fast_algorithms.rst  multidimensional_data.rst  timeseries.curve_geometry.rst  timeseries.fast_algorithms.rst  timeseries_data.rst  topological_constructions.rst
doc_src/_templates/autosummary/: class.rst
docs/: .buildinfo  .nojekyll  CONTRIBUTING.html  LICENSE.html  README.html  README_ADVANCED.html  all_methods.html  examples_README.html  genindex.html  homology.dim0.html  homology.dim1.html  index.html  multidim.fast_algorithms.html  multidimensional_data.html  objects.inv  py-modindex.html  search.html  searchindex.js  timeseries.curve_geometry.html  timeseries.fast_algorithms.html  timeseries_data.html  topological_constructions.html
docs/_modules/: homology.html  index.html  multidim.html  timeseries.html
docs/_modules/multidim/: covertree.html  models.html
docs/_modules/sklearn/: base.html
docs/_modules/timeseries/: test_mollifier.html
docs/_static/: documentation_options.js
examples/: README.rst  example-cder.ipynb  example-covertree.ipynb  example-pointcloud.ipynb  jupyter_on_github.ipynb  test_jupyter_examples.py
homology/: CMakeLists.txt  __init__.py  dim0.pyx  dim1.pyx
multidim/: CMakeLists.txt  __init__.py  covertree.py  fast_algorithms.pyx  models.py  test_barycenters.py  test_cder.py  test_cder_cv.py  test_connected_pc.py  test_covertree.py  test_gaussian.py  test_lower_star_for_image.py  test_multilabel.py  test_rca1.py  test_sever.py  test_sever_cx.py
tests/: circle-covertree-verified.txt.bz2  circle.npy  normal.npy  spiral.csv  square.npy
timeseries/: CMakeLists.txt  __init__.py  curve_geometry.pyx  fast_algorithms.pyx  test_connected.py  test_mollifier.py  test_spacecurve.py
